done with inventory

--- a/Task Manager/Views/Shared/Normal.cshtml
+++ b/Task Manager/Views/Shared/Normal.cshtml
@@ -292,7 +292,21 @@
                         </ul>
                         <!-- /.nav-second-level -->
                     </li>
+                    <li>
+                        <a><i class="fa fa-user-plus fa-fw"></i> Product<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
+                            <li>
 
+                                @Html.ActionLink("Create Product", "CreateInventory", "inventory")
+
+                            </li>
+                            <li>
+                                @Html.ActionLink("View Product", "ViewInventory", "inventory")
+
+                            </li>
+                        </ul>
+                        <!-- /.nav-second-level -->
+                    </li>
 
                 </ul>
             </div>
