--- a/Task Manager/Content/Site.css
+++ b/Task Manager/Content/Site.css
@@ -23,72 +23,6 @@ select#CustomerDropdown {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-/*------------------------------------Start Chating Css ------------------------------------------*/
-/*.chat
-{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.chat li
-{
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-    border-bottom: 1px dotted #B3A9A9;
-}
-
-.chat li.left .chat-body
-{
-    margin-left: 60px;
-}
-
-.chat li.right .chat-body
-{
-    margin-right: 60px;
-}
-
-
-.chat li .chat-body p
-{
-    margin: 0;
-    color: #777777;
-}
-
-.panel .slidedown .glyphicon, .chat .glyphicon
-{
-    margin-right: 5px;
-}
-
-.panel-body
-{
-    /*overflow-y: scroll;*/
-    /*height: 250px;*/
-}*/
-
-/*::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar
-{
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar-thumb
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #555;*/
-}
- /*------------------------------------End Chating Css ------------------------------------------*/
-
-
-
-
-
 
 select#ProjectManagerDropdown {
     width: 100%;
@@ -146,7 +80,83 @@ input[type="search"] {
     color: #555;
     border: 1px solid #ccc;
     border-radius: 4px;
-    /*/*html {
+}
+/*------------------------------------Start Chating Css ------------------------------------------*/
+/*.chat {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+    .chat li {
+        margin-bottom: 10px;
+        padding-bottom: 5px;
+        border-bottom: 1px dotted #B3A9A9;
+    }
+
+        .chat li.left .chat-body {
+            margin-left: 60px;
+        }
+
+        .chat li.right .chat-body {
+            margin-right: 60px;
+        }
+
+        .chat li .chat-body p {
+            margin: 0;
+        }
+
+    .panel .slidedown .glyphicon, .chat .glyphicon {
+        margin-right: 5px;
+    }
+
+.panel-body {
+    overflow-y: scroll;
+    height: 500px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+}*/
+
+li.left.clearfix {
+    background: seashell;
+    border-radius: 10px;
+}
+
+img.img-circle {
+    padding-top: 4px;
+    padding-left: 4px;
+}
+
+.header {
+    padding-top: 7px;
+}
+
+small.pull-right.text-muted, text-muted {
+    padding-right: 27px;
+    color: black;
+}
+/*------------------------------------End Chating Css ------------------------------------------*/
+
+
+
+
+
+
+
+/*/*html {
     background-color: #e2e2e2;
     margin: 0;
     padding: 0;
@@ -901,4 +911,3 @@ tr.pager td {
             margin: 0;
         }
 }*/
-}
