done almost with messages section

--- a/Task Manager/Content/Site.css
+++ b/Task Manager/Content/Site.css
@@ -110,7 +110,7 @@ input[type="search"] {
         margin-right: 5px;
     }
 
-.panel-body {
+.panel-body1 {
     overflow-y: scroll;
     height: 500px;
 }
