--- a/Task Manager/Views/Inventory/CreateInventory.cshtml
+++ b/Task Manager/Views/Inventory/CreateInventory.cshtml
@@ -49,7 +49,7 @@
                                     <div class="col-lg-6 ">
                                         <label>Type</label>
                                     </div>
-                                    <div class="col-lg-6 "  >
+                                    <div class="col-lg-6 ">
                                         <label class="radio-inline"><input type="radio" name="optradio" value="0" id="radio1">Local</label>
                                         <label class="radio-inline"><input type="radio" name="optradio" value="1" id="radio">Imported</label>
                                     </div>
@@ -157,24 +157,23 @@
                     $('#ProductCatogeryDropdown').append($('<option></option>').val(data[i].id).html(data[i].name));
                 });
             },
-            error: function () { alert('Grid Not Load'); }
+            error: function () { alert('Dropdown Not Load'); }
         });
     });
 
     function Add() {
-       var  model ={
-             name: document.getElementById('productname').value.trim(),
-            type : document.getElementById('radio').value,
+        var model = {
+            name: document.getElementById('productname').value.trim(),
+            type: document.getElementById('radio').value,
             catogrey: document.getElementById('ProductCatogeryDropdown').value.trim(),
-            brand : document.getElementById('brand').value.trim(),
-             model : document.getElementById('product_model').value.trim(),
-            description : document.getElementById('Description').value.trim(),
-             quantity : document.getElementById('quantity').value.trim(),
-             barcode : document.getElementById('barcode').value.trim(),
-             vendorName : document.getElementById('vendor').value.trim()
-          //  var image = document.getElementById('productimage').value.trim();
+            brand: document.getElementById('brand').value.trim(),
+            model: document.getElementById('product_model').value.trim(),
+            description: document.getElementById('Description').value.trim(),
+            quantity: document.getElementById('quantity').value.trim(),
+            barcode: document.getElementById('barcode').value.trim(),
+            vendorName: document.getElementById('vendor').value.trim()
+            //  var image = document.getElementById('productimage').value.trim();
         }
-
         $.ajax({
             async: false,
             url: '/api/InventoryApi/',
@@ -182,8 +181,8 @@
             data: JSON.stringify(model),
             contentType: "application/json;charset=utf-8",
             dataType: "json",
-            success: function (data) { console.log(data); },
-            error: function () { alert('Grid Not Load'); }
+            success: function (data) { alert(data); location.reload() },
+            error: function () { alert(data); }
         });
     }
 </script>
