--- a/Task Manager/Views/Customer/ViewCustomer.cshtml
+++ b/Task Manager/Views/Customer/ViewCustomer.cshtml
@@ -69,7 +69,7 @@
             success: function (data) {
                 console.log(data);
                 for (var i = 0; i < data.length; i++) {
-                    $("#dynamic-Grid").append("<tr><td>" + data[i].customerId + "</td><td>" + data[i].customer_name + "</td><td>" + data[i].address + "</td><td>" + data[i].Phonenumber + "</td><td>" + data[i].Website + "</td><td>" + data[i].Email + "</td><td><button value='Update' class='btn btn-primary fa fa-check' id='upd' onclick=\"preUpdate(" + data[i].customerId + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].customerId + ")\"></button>");
+                    $("#dynamic-Grid").append("<tr><td>" + data[i].customerId + "</td><td>" + data[i].customer_name + "</td><td>" + data[i].address + "</td><td>" + data[i].Phonenumber + "</td><td>" + data[i].Website + "</td><td>" + data[i].Email + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].customerId + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].customerId + ")\"></button>");
                 }
             },
             error: function () { alert('Data Not Showing'); }
