--- a/Task Manager/Views/Project/ViewProject.cshtml
+++ b/Task Manager/Views/Project/ViewProject.cshtml
@@ -72,7 +72,7 @@
             success: function (data) {
                 console.log(data);
                 for (var i = 0; i < data.length; i++) {
-                    $("#dynamic-Grid").append("<tr><td>" + data[i].projectName + "</td><td>" + data[i].startDate.substring(0, 10) + "</td><td>" + data[i].endDate.substring(0, 10) + "</td><td>" + data[i].customerName + "</td><td>" + data[i].projectManager + "</td><td>" + data[i].customerManager + "</td><td>" + data[i].Email + "</td><td>" + data[i].PhoneNumber + "</td><td><button value='Update' class='btn btn-primary fa fa-check' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].id + ")\"></button></td></tr>");
+                    $("#dynamic-Grid").append("<tr><td>" + data[i].projectName + "</td><td>" + data[i].startDate.substring(0, 10) + "</td><td>" + data[i].endDate.substring(0, 10) + "</td><td>" + data[i].customerName + "</td><td>" + data[i].projectManager + "</td><td>" + data[i].customerManager + "</td><td>" + data[i].Email + "</td><td>" + data[i].PhoneNumber + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].id + ")\"></button></td></tr>");
                    
                 }
             },
