--- a/Task Manager/Views/Customer/ViewCustomer.cshtml
+++ b/Task Manager/Views/Customer/ViewCustomer.cshtml
@@ -37,9 +37,9 @@
                     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
                             <tr>
-                                <th>Customer Id</th>
+                                <th>Customer Code</th>
                                 <th>Customer Name</th>
-                                <th>Address</th>
+                                <th>Address</th>                          
                                 <th>Contact</th>
                                 <th>Website</th>
                                 <th>Email</th>
@@ -69,7 +69,7 @@
             success: function (data) {
                 console.log(data);
                 for (var i = 0; i < data.length; i++) {
-                    $("#dynamic-Grid").append("<tr id="+i+"><td>" + data[i].customerId + "</td><td>" + data[i].customer_name + "</td><td>" + data[i].address + "</td><td>" + data[i].Phonenumber + "</td><td>" + data[i].Website + "</td><td>" + data[i].Email + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].customerId + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].customerId+","+i+")\"></button>");
+                    $("#dynamic-Grid").append("<tr id=" + i + "><td>" + data[i].city_code + "</td><td>" + data[i].customer_name + "</td><td>" + data[i].address + "</td><td>" + data[i].Phonenumber + "</td><td>" + data[i].Website + "</td><td>" + data[i].Email + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].customerId + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].customerId + "," + i + ")\"></button>");
                 }
 
             },
