--- a/Task Manager/Views/Project/CreateProject.cshtml
+++ b/Task Manager/Views/Project/CreateProject.cshtml
@@ -152,7 +152,7 @@
         //        });
 
         $.ajax({
-            async: false,
+            async: true,
             url: '/api/ProjectApi/',
             type: 'PUT',
             success: function (data) {
