--- a/Task Manager/Views/Shared/Admin.cshtml
+++ b/Task Manager/Views/Shared/Admin.cshtml
@@ -12,6 +12,8 @@
     <link href="../Content/Theme CSS/metisMenu.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="~/Content/Theme CSS/sb-admin-2.css" rel="stylesheet">
+    <link href="~/Content/select2.css" rel="stylesheet" />
+    <link href="~/Content/select2-bootstrap.css" rel="stylesheet" />
     <!-- Custom Fonts -->
     <link href="../Content/Theme CSS/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -358,7 +360,7 @@
         <!-- /.navbar-static-side -->
     </nav>
     @RenderBody()
-
+    <script src="~/Scripts/select2.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="../Scripts/Theme JS/bootstrap.min.js"></script>
     <!-- Metis Menu Plugin JavaScript -->
