--- a/Task Manager/Views/Inventory/ViewInventory.cshtml
+++ b/Task Manager/Views/Inventory/ViewInventory.cshtml
@@ -73,14 +73,14 @@
                 console.log(data);
                 var type;
                 for (var i = 0; i < data.length; i++) {
-                    if (data[i].category == true) {
+                    if (data[i].type == true) {
                         type = "Local"
                     }
                     else {
                         type = "Imported";
 
                     }
-                    $("#dynamic-Grid").append("<tr id="+i+"><td>" + data[i].name + "</td><td>" + type + "</td><td>" + data[i].brand + "</td><td>" + data[i].model + "</td><td>" + data[i].vendorName + "</td><td>" + data[i].barcode + "</td><td>" + data[i].quantity + "</td><td>" + data[i].description + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].id +","+i+")\"></button></td></tr>");
+                    $("#dynamic-Grid").append("<tr id=" + i + "><td>" + data[i].name + "</td><td>" + type + "</td><td>" + data[i].catogrey + "</td><td>" + data[i].brand + "</td><td>" + data[i].model + "</td><td>" + data[i].barcode + "</td><td>" + data[i].description + "</td><td>" + data[i].quantity + "</td><td>" + data[i].vendorName + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].id + "," + i + ")\"></button></td></tr>");
                 }
             },
             error: function () { alert('Grid Not Load'); }
