--- a/Task Manager/Views/Shared/Normal.cshtml
+++ b/Task Manager/Views/Shared/Normal.cshtml
@@ -15,7 +15,8 @@
     <!-- Custom Fonts -->
     <link href="../Content/Theme CSS/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
+    <link href="~/Content/select2.css" rel="stylesheet" />
+    <link href="~/Content/select2-bootstrap.css" rel="stylesheet" />
     <link href="../Content/Theme CSS/dataTables.bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../Content/Theme CSS/dataTables.responsive.css" rel="stylesheet" type="text/css">
     <script src="~/Scripts/Theme JS/jquery.min.js"></script>
